--- a/Task manager/View/Base.lproj/Main.storyboard
+++ b/Task manager/View/Base.lproj/Main.storyboard
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21219" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2PY-Vf-TJc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21223" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2PY-Vf-TJc">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21200"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21204"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Task Manager-->
+        <scene sceneID="4q4-mf-nr9">
+            <objects>
+                <tableViewController id="TdY-MU-s7j" customClass="CategoriesTableViewController" customModule="Task_manager" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="i7F-Wd-vaq">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoriesCell" id="Hhf-1C-PIs">
+                                <rect key="frame" x="0.0" y="50" width="428" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hhf-1C-PIs" id="7hj-80-SB8">
+                                    <rect key="frame" x="0.0" y="0.0" width="428" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="TdY-MU-s7j" id="7wC-cB-wA6"/>
+                            <outlet property="delegate" destination="TdY-MU-s7j" id="G37-ai-hJy"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Task Manager" id="zGz-I9-KBV">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="IEJ-cF-MqB">
+                            <color key="tintColor" systemColor="labelColor"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="TdY-MU-s7j" id="a20-pj-6Fg"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="YJE-r9-38K" kind="show" identifier="ItemsSegue" id="gTp-Qn-PeF"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dav-ih-qHO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="293" y="91"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="JWQ-it-COy">
             <objects>
                 <tableViewController id="YJE-r9-38K" customClass="TaskManagerViewController" customModule="Task_manager" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,7 +78,7 @@
                             <outlet property="delegate" destination="YJE-r9-38K" id="Ehw-Nh-qM3"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Task Manager" id="btd-Pf-e3f">
+                    <navigationItem key="navigationItem" title="Items" id="btd-Pf-e3f">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="wMp-uW-J6b">
                             <color key="tintColor" systemColor="labelColor"/>
                             <connections>
@@ -63,12 +102,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="YJE-r9-38K" kind="relationship" relationship="rootViewController" id="z30-0Z-49O"/>
+                        <segue destination="TdY-MU-s7j" kind="relationship" relationship="rootViewController" id="rLH-MZ-vvy"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rWk-tI-rxz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="326" y="92"/>
+            <point key="canvasLocation" x="-433" y="91"/>
         </scene>
     </scenes>
     <resources>
